--- a/15. ejs-challenge/package.json
+++ b/15. ejs-challenge/package.json
@@ -8,11 +8,15 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "18.15.0"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "lodash": "^4.17.21",
+    "mongoose": "^7.1.0",
     "nodemon": "^2.0.22"
   }
 }
